--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Oficina github</p>
     <p>eu amo minecraft</p>
     <p>eu odeio terraria</p>
+    <p>eu até gosto de fortnite</p>
 </body>
 </html>
